--- a/service-details.html
+++ b/service-details.html
@@ -156,27 +156,16 @@
               <h3>Happy Brand Image = Unforgettable Brand</h3>
               <p>It is no suprise that positive vibes have higher retention with brand audiences.</p>
               <ul>
-                <li><i class="bi bi-check-circle"></i> <span>User Experience or UI/UX Design is the science of user
-                    interactions.</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>Companies who spent time studying user engagements report
-                    much higher retention.</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>Sentiment analysis can save countless hours at
-                    scale.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>User Experience or UI/UX Design is the science of user interactions.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Companies who spent time studying user engagements report much higher retention.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Sentiment analysis can save countless hours at scale.</span></li>
               </ul>
-
               <ul>
-                <li>
-                  <p>Several tools are available for sentiment analysis, including MonkeyLearn, Lexalytics, and Hootsuite.
-                    These platforms, along with Userlytics' AI sentiment analysis tool, help businesses interpret user
-                    sentiment across digital experiences.</p>
-                </li>
-                <li>
-                  <p>Sentiment analysis helps companies save time and resources by automating the emotional analysis of user
-                    feedback.</p>
-                </li>
+                <li><p>Several tools are available for sentiment analysis, including MonkeyLearn, Lexalytics, and Hootsuie.</p></li>
+                <li><p>These platforms, along with Userlytics' AI sentiment analysis tool, help businesses interpret user sentiment across digital experiences.</p></li>
+                <li><p>Sentiment analysis helps companies save time and resources by automating the emotional analysis of user feedback.</p></li>
               </ul>
-              <div class="mt-4">
-                <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule Web development consultation"><i class="bi bi-calendar-check me-2"></i>Web Consultation</a>
+              <div class="mt-4"><a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule Web development consultation"><i class="bi bi-calendar-check me-2"></i>Web Consultation</a>
               </div>
             </div><!-- closing -->
 
@@ -197,9 +186,9 @@
                 <li><p>Agile development methodologies ensure timely delivery.</p></li>
               </ul>
               <!-- Calendly Booking Button -->
-              <div class="mt-4"><a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule software development consultation"><i class="bi bi-calendar-check me-2"></i>Software Consultation</a>
-            </div>
-          </div><!-- closing -->
+               <div class="mt-4"><a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule software development consultation"><i class="bi bi-calendar-check me-2"></i>Software Consultation</a>
+              </div>
+            </div><!-- closing -->
 
             <!-- Product Management Content -->
             <div class="col-lg-8">
@@ -220,14 +209,14 @@
                   client portfolios.</p></li>
               </ul>
               <!-- Calendly Booking Button -->
-              <div class="mt-4"><a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule Product consultation"><i class="bi bi-calendar-check me-2"></i>Product Consultation</a>
-            </div>
-          </div><!-- closing -->
+               <div class="mt-4"><a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule Product consultation"><i class="bi bi-calendar-check me-2"></i>Product Consultation</a>
+              </div>
+            </div><!-- closing -->
 
           <!-- Graphic Design -->
           <div class="col-lg-8">
           <div id="graphic" class="service-content active" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/services4.jpg" alt="" class="img-fluid services-img">
+            <img src="assets/img/services4.jpg" alt="Designs" class="img-fluid services-img">
             <h3>Visual Storytelling That Converts</h3>
             <p>Where aesthetics meet business objectives.</p>
             <ul>
@@ -241,30 +230,29 @@
               <li><p>Through agile release trains and sprint retrospectives, we maintain 92% feature adoption rates across client portfolios.</p></li>
             </ul>
             <!-- Calendly Booking Button -->
-            <div class="mt-4"><a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Branding consultation"><i class="bi bi-calendar-check me-2"></i>Branding Consultation</a>
+             <div class="mt-4"><a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Branding consultation"><i class="bi bi-calendar-check me-2"></i>Branding Consultation</a>
             </div>
           </div><!-- closing -->
 
-
-            <!-- Marketing Content -->
-            <div class="col-lg-8">
+          <!-- Marketing Content -->
+           <div class="col-lg-8">
             <div id="marketing" class="service-content" data-aos="fade-up" data-aos-delay="200">
               <img src="assets/img/services5.png" alt="Marketing analytics dashboard" class="img-fluid services-img">
               <h3>Full-Funnel Growth Engineering</h3>
               <p>We don't just generate leads - we build demand engines.</p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Technical SEO & schema markup implementation.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Performance marketing with GA4 integration.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Account-based marketing automation.</span></li>
-            </ul>
-            <ul>
-              <li></li><p>Our growth stack combines Marketo automation with Clearbit enrichment, driving average 3.2x ROAS for SaaS clients.</p></li>
-              <li></li><p>We specialize in developer-focused marketing: technical content clusters, API documentation optimization, and community-led growth strategies.</p></li>
-            </ul>
-            <!-- Calendly Booking Button -->
-             <div class="mt-4"><a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Marketing consultation"><i class="bi bi-calendar-check me-2"></i>Marketing Consultation</a>
-            </div>
-          </div><!-- closing -->
+              <ul>
+                <li><i class="bi bi-check-circle"></i><span>Technical SEO & schema markup implementation.</span></li>
+                <li><i class="bi bi-check-circle"></i><span>Performance marketing with GA4 integration.</span></li>
+                <li><i class="bi bi-check-circle"></i><span>Account-based marketing automation.</span></li>
+              </ul>
+              <ul>
+                <li></li><p>Our growth stack combines Marketo automation with Clearbit enrichment, driving average 3.2x ROAS for SaaS clients.</p></li>
+                <li></li><p>We specialize in developer-focused marketing: technical content clusters, API documentation optimization, and community-led growth strategies.</p></li>
+              </ul>
+              <!-- Calendly Booking Button -->
+               <div class="mt-4"><a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Marketing consultation"><i class="bi bi-calendar-check me-2"></i>Marketing Consultation</a>
+              </div>
+            </div><!-- closing -->
 
             <!-- Web3 Content -->
             <div class="col-lg-8">
@@ -286,8 +274,8 @@
             </ul>
             <!-- Calendly Booking Button -->
              <div class="mt-4"><a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="web3 consultation"><i class="bi bi-calendar-check me-2"></i>Web3 Consultation</a>
+             </div>
             </div><!--closing-->
-
             <!--Impact-->
             <div class="web3-impact mt-4">
               <h4>Recent Web3 Milestones</h4>
@@ -298,7 +286,6 @@
                     <div class="achievement-text">Monthly transactions processed</div>
                   </div>
                 </div>
-
                 <div class="col-md-6">
                   <div class="achievement-card">
                     <div class="achievement-number">97%</div>
@@ -307,26 +294,24 @@
                 </div>
               </div>
             </div><!--closing-->
-
             <!--Core Tech-->
             <div class="web3-tech-stack mt-5">
               <h4>Core Technology Stack</h4>
               <div class="tech-badges">
-              <ul>
-                <li><span class="badge bg-dark">Solidity 0.8+</span></li>
-                <li><span class="badge bg-primary">IPFS</span></li>
-                <li><span class="badge bg-success">Graph Protocol</span></li>
-                <li><span class="badge bg-danger">Chainlink Oracles</span></li>
-                <li><span class="badge bg-warning">Zero-Knowledge Proofs</span></li>
-              </ul>
-            </div>
-          </div><!--closing-->
-          <div class="cta-section mt-5">
-            <p class="text-muted">Featured Web3 Innovation | Open Sourced</p>
-            <div class="mt-4">
-              <a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule Web3 consultation"><i class="bi bi-calendar-check me-2"></i>Web3 Consultation</a>
-            </div>
-          </div><!-- Closing div for #web3 -->
+                <ul>
+                  <li><span class="badge bg-dark">Solidity 0.8+</span></li>
+                  <li><span class="badge bg-primary">IPFS</span></li>
+                  <li><span class="badge bg-success">Graph Protocol</span></li>
+                  <li><span class="badge bg-danger">Chainlink Oracles</span></li>
+                  <li><span class="badge bg-warning">Zero-Knowledge Proofs</span></li>
+                </ul>
+              </div>
+            </div><!--closing-->
+            <div class="cta-section mt-5">
+              <p class="text-muted">Featured Web3 Innovation | Open Sourced</p>
+              <div class="mt-4"><a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule Web3 consultation"><i class="bi bi-calendar-check me-2"></i>Web3 Consultation</a>
+              </div>
+         </div><!-- Closing div for #web3 -->
         </section><!-- /Service Details Section -->
         <style>
       .services-list a {
