--- a/service-details.html
+++ b/service-details.html
@@ -144,7 +144,7 @@
               <a href="#product">Product Management</a>
               <a href="#graphic">Graphic Design</a>
               <a href="#marketing">Marketing</a>
-              <a href="#web3">Web 3.0 Champions</a>
+              <!-- <a href="#web3">Web 3.0 Champions</a> -->
             </div>
           </div>
 
@@ -170,7 +170,7 @@
             </div><!-- closing -->
 
             <!-- Software Content -->
-            <div class="col-lg-8">
+            <!-- <div class="col-lg-8"> -->
             <div id="development" class="service-content active" data-aos="fade-up" data-aos-delay="200">
               <img src="assets/img/services2.png" alt="Custom Development Solutions" class="img-fluid services-img">
               <h3>Software Development Solutions</h3>
@@ -187,11 +187,11 @@
               </ul>
               <!-- Calendly Booking Button -->
                <div class="mt-4"><a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule software development consultation"><i class="bi bi-calendar-check me-2"></i>Software Consultation</a>
-              </div>
-            </div><!-- closing -->
+              </div><!-- closing -->
+            </div>
 
             <!-- Product Management Content -->
-            <div class="col-lg-8">
+            <!-- <div class="col-lg-8"> -->
              <div id="product" class="service-content active" data-aos="fade-up" data-aos-delay="200">
               <img src="assets/img/services3.jpg" alt="" class="img-fluid services-img">
               <h3>Strategic Product Leadership</h3>
@@ -214,7 +214,7 @@
             </div><!-- closing -->
 
           <!-- Graphic Design -->
-          <div class="col-lg-8">
+          <!-- <div class="col-lg-8"> -->
           <div id="graphic" class="service-content active" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/services4.jpg" alt="Designs" class="img-fluid services-img">
             <h3>Visual Storytelling That Converts</h3>
@@ -235,7 +235,7 @@
           </div><!-- closing -->
 
           <!-- Marketing Content -->
-           <div class="col-lg-8">
+           <!-- <div class="col-lg-8"> -->
             <div id="marketing" class="service-content" data-aos="fade-up" data-aos-delay="200">
               <img src="assets/img/services5.png" alt="Marketing analytics dashboard" class="img-fluid services-img">
               <h3>Full-Funnel Growth Engineering</h3>
@@ -254,7 +254,7 @@
               </div>
             </div><!-- closing -->
 
-            <!-- Web3 Content -->
+            <!-- Web3 Content 
             <div class="col-lg-8">
             <div id="Web3" class="service-content" data-aos="fade-up" data-aos-delay="200">
               <img src="assets/img/web3.png" alt="Web 3.0" class="img-fluid services-img">
@@ -272,11 +272,11 @@
               <li><p>Our growth stack combines Marketo automation with Clearbit enrichment, driving average 3.2x ROAS for SaaS clients.</p></li>
               <li><p>We specialize in developer-focused marketing: technical content clusters, API documentation optimization, and community-led growth strategies.</p></li>
             </ul>
-            <!-- Calendly Booking Button -->
+          Calendly Booking Button
              <div class="mt-4"><a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="web3 consultation"><i class="bi bi-calendar-check me-2"></i>Web3 Consultation</a>
              </div>
-            </div><!--closing-->
-            <!--Impact-->
+            </div>closing
+          Impact
             <div class="web3-impact mt-4">
               <h4>Recent Web3 Milestones</h4>
               <div class="row">
@@ -293,8 +293,8 @@
                   </div>
                 </div>
               </div>
-            </div><!--closing-->
-            <!--Core Tech-->
+            </div>
+           Core Tech
             <div class="web3-tech-stack mt-5">
               <h4>Core Technology Stack</h4>
               <div class="tech-badges">
@@ -306,12 +306,12 @@
                   <li><span class="badge bg-warning">Zero-Knowledge Proofs</span></li>
                 </ul>
               </div>
-            </div><!--closing-->
+            </div>closing
             <div class="cta-section mt-5">
               <p class="text-muted">Featured Web3 Innovation | Open Sourced</p>
               <div class="mt-4"><a href="https://calendly.com/supitsj" class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" aria-label="Schedule Web3 consultation"><i class="bi bi-calendar-check me-2"></i>Web3 Consultation</a>
               </div>
-         </div><!-- Closing div for #web3 -->
+         </div>Closing div for #web3 .....-->
         </section><!-- /Service Details Section -->
         <style>
       .services-list a {
