--- a/service-details.html
+++ b/service-details.html
@@ -304,7 +304,7 @@
             </div><!-- closing -->
 
             <!-- Web3 Content -->
-              <div id="Web3" class="service-content" data-aos="fade-up" data-aos-delay="200">
+              <div id="web3" class="service-content" data-aos="fade-up" data-aos-delay="200">
                 <img src="assets/img/web3.png" alt="Web 3.0" class="img-fluid services-img">
                 <h3>Web3 Development Champions</h3>
                 <p>Building the decentralized future with enterprise-grade blockchain solutions and modern security
