--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Services</h2>
+        <h2>Services - Click on a Sevice to find out more.</h2>
         <p>Interested in contracting me for your next project? Let's connect and discuss how I can bring real world
           experience to your team or company.
         </p>
