--- a/index.html
+++ b/index.html
@@ -491,22 +491,28 @@
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
+            <!--All -->
             <li data-filter="*" class="filter-active">All</li>
+            <!--Tokens -->
             <li data-filter=".filter-tokens">Tokens</li>
+            <!--Tech -->
             <li data-filter=".filter-tech">Tech</li>
+            <!--Dev -->
             <li data-filter=".filter-dev">Dev</li>
-            <li data-filter=".filter-casino">Casino</li>
+            <!--Blog -->
+            <li data-filter=".filter-blog">Blog</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-tokens">
+            <!--Blog 1-->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-blog">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Blog: In Bitcoin We Trust</h4>
+                  <h4>Blog:</h4>
                   <p>The Elon Musk effect On A Bitcoin Backed Stablecoin</p>
-                  <a href="assets/img/portfolio/app-1.jpg" title="Tokens 1" data-gallery="portfolio-tokens"
+                  <a href="assets/img/portfolio/app-1.jpg" title="The Elon Musk effect On A Bitcoin Backed Stablecoin" data-gallery="filter-blog"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://www.linkedin.com/pulse/bitcoin-we-trust-elon-musk-effect-bitcoin-backed-stablecoin-lucus-ckfhc/?trackingId=rxLAb8PARmqYHzyrnTBYnQ%3D%3D"
                     title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
@@ -514,49 +520,166 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+            <!--Blog 2-->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-blog">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/product-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Blog: The Art of Affiliate Whoring</h4>
                   <p>The Art of Affiliate Whoring 2025 Edition.</p>
-                  <a href="assets/img/portfolio/product-1.jpg" title="Casino 1" data-gallery="portfolio-casino"
+                  <a href="assets/img/portfolio/product-1.jpg" title="The Art of Affiliate Whoring 2025 Edition" data-gallery="filter-blog"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://www.linkedin.com/pulse/art-affiliate-whoring-2025-edition-jesse-lucus-3ukbc/?trackingId=BuGqPBnfS%2BGvOu1n1cs0EA%3D%3D"
+                    <a href="https://www.linkedin.com/pulse/art-affiliate-whoring-2025-edition-jesse-lucus-3ukbc/?trackingId=BuGqPBnfS%2BGvOu1n1cs0EA%3D%3D"
                     title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+            
+            <!--Blog 3-->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-blog">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Blog: The Evolution of Money Laundering</h4>
-                  <p>The United States Secret Service Is About To Change Everything We Know About Crypto.</p>
-                  <a href="assets/img/portfolio/branding-1.jpg" title="Tech 1" data-gallery="portfolio-tech"
-                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://www.linkedin.com/pulse/evolution-money-laundering-jesse-lucus-9nrpc/?trackingId=iX2cv03jQK2S7Wd5u7SmoA%3D%3D"
-                    title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>Blog: The Secret Service Is About to Change Everything</h4>
+                  <p>The new digital cops are ramping up for enforcement.</p>
+                  <a href="assets/img/portfolio/branding-1.jpg" title="The Secret Service Is About to Change Everything" data-gallery="filter-blog" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://www.linkedin.com/pulse/evolution-money-laundering-jesse-lucus-9nrpc/?trackingId=iX2cv03jQK2S7Wd5u7SmoA%3D%3D" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
+            <!--Dev 1-->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dev">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/leaderboardsvip.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Leaderboards.VIP</h4>
+                  <p>Deploy a competitive wager site in less than 3 min.</p>
+                  <a href="assets/img/portfolio/leaderboardsvip.png" title="Deploy a competitive wager site in less than 3 min" data-gallery="filter-dev" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://youtu.be/laIpqRla7K0" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <!--Dev 2-->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dev">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>StakeReloadXS.com</h4>
                   <p>Claim your casino bonuses your way.</p>
-                  <a href="assets/img/portfolio/books-1.jpg" title="Dev 1" data-gallery="portfolio-dev"
+                  <a href="assets/img/portfolio/books-1.jpg" title="StakeReload" data-gallery="portfolio-dev"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://github.com/StakeReload/web" title="More Details" class="details-link"><i
+                  <a href="https://github.com/StakeReload/xs" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
+            <!--Dev 3-->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dev">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/construction.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Placeholder Dev 3</h4>
+                  <p>Lorem Ipsum</p>
+                  <a href="assets/img/portfolio/construction.jpg" title="Under Construction" data-gallery="portfolio-dev"
+                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
 
+            <!--Tech 1-->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-tech">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/construction.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Placeholder Tech 1</h4>
+                  <p>Lorem Ipsum</p>
+                  <a href="assets/img/portfolio/construction.jpg" title="Under Construction" data-gallery="portfolio-tech"
+                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <!--Tech 2-->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-tech">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/construction.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Placeholder Tech 2</h4>
+                  <p>Lorem Ipsum</p>
+                  <a href="assets/img/portfolio/construction.jpg" title="Under Construction" data-gallery="portfolio-tech"
+                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <!--Tech 3-->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-tech">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/construction.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Placeholder Tech 3</h4>
+                  <p>Lorem Ipsum</p>
+                  <a href="assets/img/portfolio/construction.jpg" title="Under Construction" data-gallery="portfolio-tech"
+                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <!--Tokens 1-->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-tokens">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/construction.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Placeholder Tokens 1</h4>
+                  <p>Lorem Ipsum</p>
+                  <a href="assets/img/portfolio/construction.jpg" title="Under Construction" data-gallery="portfolio-tokens"
+                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <!--Tokens 2-->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-tokens">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/construction.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Placeholder Tokens 3</h4>
+                  <p>Lorem Ipsum</p>
+                  <a href="assets/img/portfolio/construction.jpg" title="Under Construction" data-gallery="portfolio-tokens"
+                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <!--Tokens 3-->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-tokens">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/construction.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Placeholder Tokens 3</h4>
+                  <p>Lorem Ipsum</p>
+                  <a href="assets/img/portfolio/construction.jpg" title="Under Construction" data-gallery="portfolio-tokens"
+                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
 
           </div><!-- End Portfolio Container -->
 
