--- a/index.html
+++ b/index.html
@@ -611,11 +611,11 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/construction.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Placeholder Tech 2</h4>
-                  <p>Lorem Ipsum</p>
-                  <a href="assets/img/portfolio/construction.jpg" title="Under Construction" data-gallery="portfolio-tech"
+                  <h4>FormerlyIncarcerate.org</h4>
+                  <p>Driving meaningful impact through media.</p>
+                  <a href="assets/img/portfolio/construction.jpg" title="Driving meaningful impact through media." data-gallery="portfolio-tech"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="" title="More Details" class="details-link"><i
+                  <a href="https://formerlyincarcerated.org" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -639,13 +639,13 @@
             <!--Tokens 1-->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-tokens">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/construction.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/tokens1.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Placeholder Tokens 1</h4>
-                  <p>Lorem Ipsum</p>
-                  <a href="assets/img/portfolio/construction.jpg" title="Under Construction" data-gallery="portfolio-tokens"
+                  <h4>How Telegram & TON Could Revolutionize Advertising Networks in Social Media</h4>
+                  <p>Blockchain Technology TON looks to Change everything we know about advertising online.</p>
+                  <a href="assets/img/portfolio/tokens1.png" title="How Telegram & TON Could Revolutionize Advertising Networks in Social Media" data-gallery="portfolio-tokens"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="" title="More Details" class="details-link"><i
+                  <a href="https://www.linkedin.com/pulse/how-telegram-ton-could-revolutionize-advertising-networks-jesse-lucus-9pwrc?trackingId=aL4JWYAET32bWDkJ6eMoMQ%3D%3D&lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_recent_activity_content_view%3BX7egOZHcQfahubLCriIF0Q%3D%3D" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
