--- a/index.html
+++ b/index.html
@@ -579,32 +579,20 @@
                   <p>Claim your casino bonuses your way.</p>
                   <a href="assets/img/portfolio/books-1.jpg" title="StakeReload" data-gallery="portfolio-dev"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://github.com/StakeReload/xs" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a>
-                </div>
+                  <a href="https://github.com/StakeReload/xs" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a></div>
               </div>
             </div><!-- End Portfolio Item -->
 
             <!--Dev 3-->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dev">
               <div class="portfolio-content h-100">
-                <div class="ratio ratio-16x9">
-                  <iframe src="https://www.youtube.com/watch?v=EoPWaIRy0Ds" title="Unreal Kingdoms Concept"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen>
-                  </iframe>
+                <img src="assets/img/portfolio/unreal-thumb.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Video:</h4>
+                  <p>Unreal Kingdoms Graphics Motion Concept</p>
+                  <a href="https://www.youtube.com/watch?v=EoPWaIRy0Ds" title="Watch on YouTube" class="details-link"><i class="bi bi-link-45deg"></i></a></div>
                 </div>
-                <div class="portfolio-info mt-3">
-                  <h4>UnrealKingdoms:</h4>
-                  <p>Graphics Motion Concept</p>
-                  <a href="https://www.youtube.com/watch?v=EoPWaIRy0Ds" title="Watch on YouTube"
-                    class="details-link">
-                    <i class="bi bi-link-45deg"></i>
-                  </a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
+              </div><!-- End Portfolio Item -->
 
             <!--Tech 1-->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-tech">
@@ -657,8 +645,8 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/tokens1.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>How Telegram & TON Could Revolutionize Advertising Networks in Social Media</h4>
-                  <p>Blockchain Technology TON looks to Change everything we know about advertising online.</p>
+                  <h4>Blog: TON is Changing Advertising.</h4>
+                  <p>Changing everything we know about advertising online.</p>
                   <a href="assets/img/portfolio/tokens1.png"
                     title="How Telegram & TON Could Revolutionize Advertising Networks in Social Media"
                     data-gallery="portfolio-tokens" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
@@ -779,7 +767,7 @@
 
     <section id="testimonials" class="testimonials section light-background">
       <!-- Section Title -->
-      <div class="testimonials-title">
+      <div class="container section-title" data-aos="fade-up">
         <h2>Favorite Quotes</h2>
       </div>
 
