--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
             <!-- Hugging Face -->
             <div class="service-card" data-aos="fade-up" data-aos-delay="100">
               <div class="service-icon">
-                <img src="assets/img/ai-models/huggingface.png" alt="Hugging Face">
+                <object type="image/svg+xml" data="assets/img/ai-models/huggingface.svg" class="ai-logo-svg">Hugging Face</object>
               </div>
               <h3 class="service-name">Hugging Face</h3>
               <p class="service-company">Hugging Face Inc.</p>
@@ -736,7 +736,7 @@
             <!-- Llama -->
             <div class="service-card" data-aos="fade-up" data-aos-delay="200">
               <div class="service-icon">
-                <img src="assets/img/ai-models/llama.png" alt="Llama">
+                <object type="image/svg+xml" data="assets/img/ai-models/meta-color.svg" class="ai-logo-svg">Llama</object>
               </div>
               <h3 class="service-name">Llama</h3>
               <p class="service-company">Meta AI</p>
@@ -747,7 +747,7 @@
             <!-- Gemma -->
             <div class="service-card" data-aos="fade-up" data-aos-delay="300">
               <div class="service-icon">
-                <img src="assets/img/ai-models/gemma.png" alt="Gemma">
+                <object type="image/svg+xml" data="assets/img/ai-models/gemma-color.svg" class="ai-logo-svg">Gemma</object>
               </div>
               <h3 class="service-name">Gemma</h3>
               <p class="service-company">Google</p>
@@ -758,7 +758,7 @@
             <!-- Claude -->
             <div class="service-card" data-aos="fade-up" data-aos-delay="400">
               <div class="service-icon">
-                <img src="assets/img/ai-models/claude.png" alt="Claude">
+                <object type="image/svg+xml" data="assets/img/ai-models/claude-color.svg" class="ai-logo-svg">Claude</object>
               </div>
               <h3 class="service-name">Claude</h3>
               <p class="service-company">Anthropic</p>
@@ -769,7 +769,7 @@
             <!-- Sonnet -->
             <div class="service-card" data-aos="fade-up" data-aos-delay="500">
               <div class="service-icon">
-                <img src="assets/img/ai-models/sonnet.png" alt="Sonnet">
+                <object type="image/svg+xml" data="assets/img/ai-models/anthropic.svg" class="ai-logo-svg">Sonnet</object>
               </div>
               <h3 class="service-name">Claude 3 Sonnet</h3>
               <p class="service-company">Anthropic</p>
@@ -780,7 +780,7 @@
             <!-- Gemini -->
             <div class="service-card" data-aos="fade-up" data-aos-delay="600">
               <div class="service-icon">
-                <img src="assets/img/ai-models/gemini.png" alt="Gemini">
+                <object type="image/svg+xml" data="assets/img/ai-models/gemini-color.svg" class="ai-logo-svg">Gemini</object>
               </div>
               <h3 class="service-name">Gemini</h3>
               <p class="service-company">Google</p>
@@ -791,11 +791,44 @@
             <!-- Continue -->
             <div class="service-card" data-aos="fade-up" data-aos-delay="700">
               <div class="service-icon">
-                <img src="assets/img/ai-models/continue.png" alt="Continue">
+                <object type="image/svg+xml" data="assets/img/ai-models/copilot-color.svg" class="ai-logo-svg">Continue</object>
               </div>
               <h3 class="service-name">Continue</h3>
               <p class="service-company">Continue Dev</p>
               <p class="service-description">Open-source coding assistant that helps developers write, understand, and improve code.</p>
+              <span class="ai-model-tag open-source">Open Source</span>
+            </div>
+
+            <!-- Augment -->
+            <div class="service-card" data-aos="fade-up" data-aos-delay="800">
+              <div class="service-icon">
+                <object type="image/svg+xml" data="assets/img/ai-models/cohere-color.svg" class="ai-logo-svg">Augment</object>
+              </div>
+              <h3 class="service-name">Augment</h3>
+              <p class="service-company">Augment Code</p>
+              <p class="service-description">AI-powered coding assistant that enhances developer productivity with context-aware suggestions.</p>
+              <span class="ai-model-tag proprietary">Proprietary</span>
+            </div>
+
+            <!-- DeepSeek -->
+            <div class="service-card" data-aos="fade-up" data-aos-delay="900">
+              <div class="service-icon">
+                <object type="image/svg+xml" data="assets/img/ai-models/deepseek-color.svg" class="ai-logo-svg">DeepSeek</object>
+              </div>
+              <h3 class="service-name">DeepSeek</h3>
+              <p class="service-company">DeepSeek AI</p>
+              <p class="service-description">Advanced AI model for code generation and complex problem-solving tasks.</p>
+              <span class="ai-model-tag open-source">Open Source</span>
+            </div>
+
+            <!-- OpenWeb -->
+            <div class="service-card" data-aos="fade-up" data-aos-delay="1000">
+              <div class="service-icon">
+                <object type="image/svg+xml" data="assets/img/ai-models/openwebui.svg" class="ai-logo-svg">OpenWeb</object>
+              </div>
+              <h3 class="service-name">OpenWeb</h3>
+              <p class="service-company">OpenWeb AI</p>
+              <p class="service-description">Web-focused AI model designed for building and optimizing web applications.</p>
               <span class="ai-model-tag open-source">Open Source</span>
             </div>
           </div>
